Add JF_URL to verify JFrog connection
Added environment variable for JFrog connection verification.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,8 @@ jobs:
           JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
         # v4 automatically seeds the 'setup-jfrog-cli-server' config
       - name: Verify JFrog connection
+        env:
+          JF_URL: ${{ env.JF_URL }}
         run: jf rt ping  
     
 #      - name: Configure JFrog Context
