--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,10 +29,10 @@ jobs:
           JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
         # v4 automatically seeds the 'setup-jfrog-cli-server' config
     
-#      - name: Configure JFrog Context
-#        run: |
-#          # Use the server ID hand-delivered by the setup action
-#          jf c use setup-jfrog-cli-server
+      - name: Configure JFrog Context
+        run: |
+          # Use the server ID hand-delivered by the setup action
+          jf c use setup-jfrog-cli-server
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -51,9 +51,7 @@ jobs:
         
           # Shifts security left by scanning the ausemartweb.csproj dependencies
           # Fails the build if vulnerabilities 'High' or above are detected
-        env:
-          JF_URL: ${{ env.JF_URL }}
-          JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
+
         run: |
           jf audit --fail=true --min-severity=High
 
@@ -70,19 +68,15 @@ jobs:
           docker tag ${{ env.IMAGE_NAME }}:${{ env.JF_BUILD_NUMBER }} trial7144t5.jfrog.io/docker-local/ausemartweb:${{ env.JF_BUILD_NUMBER }}
         # Image Scan will be done in the next step    
       - name: Gate 2
-        env:
-          JF_URL: ${{ env.JF_URL }}
-          JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
+
         run: |
           # Scans the image locally before it ever touches your registry
           # Verifies OS-level packages in the mcr.microsoft.com/dotnet/aspnet:6.0 runtime
           jf docker scan ${{ env.IMAGE_NAME }}:${{ env.JF_BUILD_NUMBER }} --fail=true
 
       - name: Push to Artifactory
-        env:
-          JF_URL: ${{ env.JF_URL }}
-          JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
-          
+
+
         run: |
           # Push image and capture Build Info for full traceability
           jf docker push trial7144t5.jfrog.io/docker-local/ausemartweb:${{ env.JF_BUILD_NUMBER }} \
@@ -90,9 +84,7 @@ jobs:
             --build-number=${{ env.JF_BUILD_NUMBER }}          
         # Build Publish & Scan will be done in the final step    
       - name: Final Gate
-        env:
-          JF_URL: ${{ env.JF_URL }}
-          JF_ACCESS_TOKEN: ${{ env.JF_ACCESS_TOKEN }}
+
 
         run: |
           # Collect environment variables and publish metadata
