--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ on:
 env:
   JF_URL: ${{ secrets.JF_URL }}
   JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+  JF_XRAY_URL: https://trial7144t5.jfrog.io/xray
   JF_BUILD_NAME: "ausemart-web-app"
   JF_BUILD_NUMBER: ${{ github.run_id }}
   # Replace with your specific Artifactory repository names
